time-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-api
  namespace: time-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: time-api
  template:
    metadata:
      labels:
        app: time-api
    spec:
      containers:
        - name: time-api
          image: gcr.io/time-api-gke-project-434215/time-api:20240901-091535
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /time
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /time
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: time-api
  namespace: time-api
spec:
  selector:
    app: time-api
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
