permissive-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: time-api
spec:
  podSelector: {}
  ingress:
    - {}
  policyTypes:
    - Ingress
